# django-email-validators

./: .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  django.po  pyproject.toml  requirements-test.txt  requirements.txt  runtests.py  tox.ini
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: codeql.yml  pre-commit-autoupdate.yml  test-package.yml
src/django_email_validators/: __init__.py  metadata.py  providers.py  utils.py  validators.py
src/django_email_validators/locale/de/LC_MESSAGES/: django.po
src/django_email_validators/locale/en/LC_MESSAGES/: django.po
src/django_email_validators/locale/es/LC_MESSAGES/: django.po
src/django_email_validators/locale/fr/LC_MESSAGES/: django.po
src/django_email_validators/locale/it/LC_MESSAGES/: django.po
src/django_validate_email_strict/: __init__.py  apps.py  metadata.py  utils.py  validators.py
src/django_validate_email_strict/locale/de/LC_MESSAGES/: django.po
src/django_validate_email_strict/locale/en/LC_MESSAGES/: django.po
src/django_validate_email_strict/locale/es/LC_MESSAGES/: django.po
src/django_validate_email_strict/locale/fr/LC_MESSAGES/: django.po
src/django_validate_email_strict/locale/it/LC_MESSAGES/: django.po
tests/: settings.py  test_fields.py  test_forms.py  test_imports.py  test_metadata.py  test_validate.py  test_validate_email_is_disposable.py  test_validate_email_mx.py  test_validate_email_non_disposable.py  test_validate_email_provider_typo.py  test_validate_email_unique_dot_insensitive.py  test_validators.py
